# ccpp1

./: .gitignore  CMakeLists.txt  README.md  hello.c
calc/: CMakeLists.txt  calc.c
include/: head.h
sort/: CMakeLists.txt  sort.c
src/: addition.c
test1/: CMakeLists.txt  test1.c
